--- a/assigment2/assigment1.3.html
+++ b/assigment2/assigment1.3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form width="50%" alin="center" action="post">
+    <form width="50%" align="center" action="post">
 <h1><b>Registration Form</b></h1><br>
 <b>First name</b>
 <input type="text" name="user name" placeholder="Mark "><BR>
