--- a/assigment2/assigment1.4.html
+++ b/assigment2/assigment1.4.html
@@ -7,23 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-        <a alien="center">Image Gallery</a><br>
-    <img src="images/1.jpg" >
-    <img src="images/2.jpg">
-    <img src="images/3.jpg">
-    <img src="images/4.jpg"> <br>
+    <a href="#image">Image Gallery</a> |
+    <a href="#Audio">Audio Gallery</a> |
+    <a href="#Video">Video Gallery</a> <br>
 
-        <a alien="center">Audio Gallery</a><br>
-    <embed src="Audio/1.mp3">
-    <embed src="Audio/2.mp3">
-    <embed src="Audio/3.mp3">
-    <embed src="Audio/4.mp3"><br>
+    <section id="image">
+        <p align="center"><b>Image Gallery</b></p><br>
+    <img src="images/1.jpg" width="300px" height="200px" Alt="notes">
+    <img src="images/2.jpg" width="300px" height="200px" alt="notes">
+    <img src="images/3.jpg" width="300px" height="200px" alt="notes" >
+    <img src="images/4.jpg" width="300px" height="200px" alt="notes" > <br>
+    <br>
+    <br>
+    </section>
+    <section id="Audio">
 
-        <b alien="center">Video Gallery</b><br>
-    <embed src="video/1.mp4">
-    <embed src="video/2.mp4">
-    <embed src="video/3.mp4">
-    <embed src="video/4.mp4"><br>
+        <p align="center"><b>Audio Gallery</b></p><br>
+    <embed src="Audio/1.mp3" width="300px" height="70px" >
+    <embed src="Audio/2.mp3" width="300px" height="70px" >
+    <embed src="Audio/3.mp3" width="300px" height="70px" >
+    <embed src="Audio/4.mp3" width="300px" height="70px" ><br>
+        <br>
+        <br>
+        </section>
+        <section id="Video">
+
+        <p align="center"><b>Video Gallery</b></p><br>
+    <embed src="video/1.mp4" width="300px" height="200px" >
+    <embed src="video/2.mp4" width="300px" height="200px" >
+    <embed src="video/3.mp4" width="300px" height="200px" >
+    <embed src="video/4.mp4" width="300px" height="200px" ><br>
+        </section>
 
 
     
