--- a/assigment2/assigment1.4.html
+++ b/assigment2/assigment1.4.html
@@ -23,10 +23,10 @@
     <section id="Audio">
 
         <p align="center"><b>Audio Gallery</b></p><br>
-    <embed src="Audio/1.mp3" width="300px" height="70px" >
-    <embed src="Audio/2.mp3" width="300px" height="70px" >
-    <embed src="Audio/3.mp3" width="300px" height="70px" >
-    <embed src="Audio/4.mp3" width="300px" height="70px" ><br>
+    <audio controls src="Audio/1.mp3" width="300px" height="70px" ></audio>
+    <audio controls src="Audio/2.mp3" width="300px" height="70px" ></audio>
+    <audio controls src="Audio/3.mp3" width="300px" height="70px" ></audio>
+    <audio controls src="Audio/4.mp3" width="300px" height="70px" ></audio><br>
         <br>
         <br>
         </section>
